<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/city" android:key="city" android:summary="@string/cityDescription"></EditTextPreference>
	<ListPreference
	    android:title="@string/countryCode"
	    android:summary="@string/countryCodeDescription"
	    android:key="countryCode"
	    android:defaultValue="de_DE" />
	<Preference
	   android:title="@string/bgColor"
	   android:summary="@string/bgColorDescription"
	   android:key="bgColor" />
	<ListPreference
		android:title="@string/iconSet"
		android:summary="@string/iconSetDescription"
		android:key="iconSet"
		android:entries="@array/iconSet"
		android:entryValues="@array/iconSet"
		android:defaultValue="colorfull" />
</PreferenceScreen>
